# ITKIOMeshMZ3

./: README.md  itk-module.cmake  pyproject.toml
.github/workflows/: build-test-package.yml
examples/: CMakeLists.txt  ReadWriteMZ3Mesh.cxx  ReadWriteMZ3Mesh.py  WriteMZ3Mesh.cxx  WriteMZ3Mesh.py
include/: itkMZ3MeshIO.h  itkMZ3MeshIO.hxx
src/: itkMZ3MeshIO.cxx  itkMZ3MeshIOFactory.cxx
test/: CMakeLists.txt
wrapping/: itkMZ3MeshIO.wrap
